--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,9 +14,11 @@
         <div class="form">
           <form class="login-form">
             <input type="text" id="id" placeholder="아이디"/>
+            <input type="text" id="name" placeholder="이름"/>
             <input type="password" id="psword" placeholder="비밀번호"/>
+            <input type="password" id="confirm-psword" placeholder="비밀번호 확인"/>
             <p id="button">SIGN UP</p>
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+            <p class="message">Already registered? <a href="/login">login</a></p>
           </form>
         </div>
       </div>
